# particle_attractor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cfd/: convection.ipynb
include/: camera.hpp  libs.hpp  mainwindow.hpp  objreader.hpp  oglwidget.hpp  renderer.hpp  scene.hpp  shaderprogram.hpp  vertex.hpp  window.hpp
include/algorithms/: algorithms.hpp
include/cuda/: optflow.hpp  update_gameobject.hpp  update_models.hpp  update_velocities.hpp  utils.hpp
include/events/: events.hpp  keyboardevents.hpp  mouseevents.hpp  mouseprops.hpp  updatable.hpp  windowevents.hpp  windowprops.hpp
include/gameobject/: gameobject.hpp  gameobjectbuilder.hpp  material.hpp  mesh.hpp  particleobject.hpp  sunobject.hpp
include/renderer/: particlerenderer.hpp  renderer.hpp  sunrenderer.hpp
res/: horn_schunck.ipynb
res/.ipynb_checkpoints/: horn_schunck-checkpoint.ipynb
src/: CMakeLists.txt  algorithms.cpp  camera.cpp  gameobject.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  objreader.cpp  oglwidget.cpp  particle_attractor  particlerenderer.cpp  shaderprogram.cpp  window.cpp
src/cuda/: optflow.cu  update_gameobject.cu  update_models.cu  update_velocities.cu
src/gameobject/: gameobject.cpp  material.cpp  mesh.cpp
src/glsl/: object_fs.glsl  object_vs_instanced.glsl
src/renderer/: particlerenderer.cpp  renderer.cpp  sunrenderer.cpp
src/resources/: resources.qrc  slime.blend  sphere.blend  sphere.blend1
src/resources/glsl/: object_fs.glsl  object_vs.glsl  object_vs_instanced.glsl  sun_fs.glsl
src/resources/objects/: globe-sphere.mtl
